{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 32,
  "lineage": "7efb9764-425a-5a71-935c-7dba2121931e",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/3e94e65a-e33a-4a3e-ade5-d9addc30c440/resourceGroups/my-terraform-rg/providers/Microsoft.Network/networkInterfaces/my-vm-nic",
            "internal_domain_name_suffix": "ixptte1gpreufekq4v3h1q3sia.zrhx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/3e94e65a-e33a-4a3e-ade5-d9addc30c440/resourceGroups/my-terraform-rg/providers/Microsoft.Network/publicIPAddresses/my-vm-publicip",
                "subnet_id": "/subscriptions/3e94e65a-e33a-4a3e-ade5-d9addc30c440/resourceGroups/my-terraform-rg/providers/Microsoft.Network/virtualNetworks/my-vnet/subnets/my-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "switzerlandnorth",
            "name": "my-vm-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "my-terraform-rg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nic_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3e94e65a-e33a-4a3e-ade5-d9addc30c440/resourceGroups/my-terraform-rg/providers/Microsoft.Network/networkInterfaces/my-vm-nic|/subscriptions/3e94e65a-e33a-4a3e-ade5-d9addc30c440/resourceGroups/my-terraform-rg/providers/Microsoft.Network/networkSecurityGroups/my-vm-nsg",
            "network_interface_id": "/subscriptions/3e94e65a-e33a-4a3e-ade5-d9addc30c440/resourceGroups/my-terraform-rg/providers/Microsoft.Network/networkInterfaces/my-vm-nic",
            "network_security_group_id": "/subscriptions/3e94e65a-e33a-4a3e-ade5-d9addc30c440/resourceGroups/my-terraform-rg/providers/Microsoft.Network/networkSecurityGroups/my-vm-nsg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.nic",
            "azurerm_network_security_group.nsg",
            "azurerm_public_ip.publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3e94e65a-e33a-4a3e-ade5-d9addc30c440/resourceGroups/my-terraform-rg/providers/Microsoft.Network/networkSecurityGroups/my-vm-nsg",
            "location": "switzerlandnorth",
            "name": "my-vm-nsg",
            "resource_group_name": "my-terraform-rg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "http_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/3e94e65a-e33a-4a3e-ade5-d9addc30c440/resourceGroups/my-terraform-rg/providers/Microsoft.Network/networkSecurityGroups/my-vm-nsg/securityRules/HTTP_Access",
            "name": "HTTP_Access",
            "network_security_group_name": "my-vm-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "my-terraform-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/3e94e65a-e33a-4a3e-ade5-d9addc30c440/resourceGroups/my-terraform-rg/providers/Microsoft.Network/networkSecurityGroups/my-vm-nsg/securityRules/SSH_Access",
            "name": "SSH_Access",
            "network_security_group_name": "my-vm-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "my-terraform-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/3e94e65a-e33a-4a3e-ade5-d9addc30c440/resourceGroups/my-terraform-rg/providers/Microsoft.Network/publicIPAddresses/my-vm-publicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.161.16.45",
            "ip_version": "IPv4",
            "location": "switzerlandnorth",
            "name": "my-vm-publicip",
            "resource_group_name": "my-terraform-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3e94e65a-e33a-4a3e-ade5-d9addc30c440/resourceGroups/my-terraform-rg/providers/Microsoft.Network/virtualNetworks/my-vnet/subnets/my-subnet",
            "name": "my-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "my-terraform-rg",
            "virtual_network_name": "my-vnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "9339df45-7c66-4249-9150-f57a7dc3b240",
            "id": "/subscriptions/3e94e65a-e33a-4a3e-ade5-d9addc30c440/resourceGroups/my-terraform-rg/providers/Microsoft.Network/virtualNetworks/my-vnet",
            "location": "switzerlandnorth",
            "name": "my-vnet",
            "resource_group_name": "my-terraform-rg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}